--- a/player/templates/player/profile.html
+++ b/player/templates/player/profile.html
@@ -158,6 +158,21 @@
                                 <b><font size="5" >{{ player.pk }}</font></b>
                             </div>
                         </div>
+                        <!--Навыки персонажа-->
+                        <div class="row flex" style="margin-left: 10px;">
+                            <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+                                <b><font size="5">Навыки:</font></b>
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <b>
+                                    <font size="4" color="FF0000">{{ player.power }}</font>
+                                    /
+                                    <font size="4" color="337AB7">{{ player.knowledge }}</font>
+                                    /
+                                    <font size="4" color="#18D04C">{{ player.endurance }}</font>
+                                </b>
+                            </div>
+                        </div>
                         <!--место нахождения-->
                         <div class="row flex" style="margin-left: 10px;">
                             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
