--- a/player/templates/player/overview_skills.html
+++ b/player/templates/player/overview_skills.html
@@ -1,4 +1,5 @@
 {% load get_sum %}
+{% load get_sub %}
 {% load get_mul %}
 {% load i18n %}
 {% load tz %}
@@ -12,10 +13,10 @@
 </div>
 <div class="row" style="margin-top: 1%">
     {% if train and train.skill == 'power' %}
-    <div class="col-xs-12 col-sm-12 col-md-12" align="center">
+    <div class="col-xs-12 col-sm-12 col-md-12" align="center" style="color: 959595;">
         Завершение: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}
     </div>
-    {% else %}
+    {% endif %}
     <div class="col-xs-6 col-sm-6 col-md-6" align="center">
         <div class="row">
             Стоимость:
@@ -30,13 +31,12 @@
         </div>
         <div class="row">
             {% if premium %}
-            {{ player.power|get_sum:1|get_mul:2400|get_hh_mm_ss }}
+            {{ player.power|get_sum:power_count|get_sum:1|get_mul:2400|get_hh_mm_ss }}
             {% else %}
-            {{ player.power|get_sum:1|get_mul:3600|get_hh_mm_ss }}
+            {{ player.power|get_sum:power_count|get_sum:1|get_mul:3600|get_hh_mm_ss }}
             {% endif %}
         </div>
     </div>
-    {% endif %}
 </div>
 <div class="row" style="margin-top: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12" align="center">
@@ -51,6 +51,11 @@
             Изучить
             {% endif %}
         </button>
+        {% if train and premium and has_slot %}
+        <button type="submit" onclick="up_skill('power')" class="save btn btn-default">
+            +
+        </button>
+        {% endif %}
     </div>
 </div>
 <!--знания-->
@@ -61,10 +66,10 @@
 </div>
 <div class="row" style="margin-top: 1%">
     {% if train and train.skill == 'knowledge' %}
-    <div class="col-xs-12 col-sm-12 col-md-12" align="center">
+    <div class="col-xs-12 col-sm-12 col-md-12" align="center" style="color: 959595;">
         Завершение: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}
     </div>
-    {% else %}
+    {% endif %}
     <div class="col-xs-6 col-sm-6 col-md-6" align="center">
         <div class="row">
             Стоимость:
@@ -79,13 +84,12 @@
         </div>
         <div class="row">
             {% if premium %}
-            {{ player.knowledge|get_sum:1|get_mul:2400|get_hh_mm_ss }}
+            {{ player.knowledge|get_sum:knowledge_count|get_sum:1|get_mul:2400|get_hh_mm_ss }}
             {% else %}
-            {{ player.knowledge|get_sum:1|get_mul:3600|get_hh_mm_ss }}
+            {{ player.knowledge|get_sum:knowledge_count|get_sum:1|get_mul:3600|get_hh_mm_ss }}
             {% endif %}
         </div>
     </div>
-    {% endif %}
 </div>
 <div class="row" style="margin-top: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12" align="center">
@@ -100,6 +104,11 @@
             Изучить
             {% endif %}
         </button>
+        {% if train and premium and has_slot %}
+        <button type="submit" onclick="up_skill('knowledge')" class="save btn btn-default">
+            +
+        </button>
+        {% endif %}
     </div>
 </div>
 <!--выносливость-->
@@ -110,10 +119,10 @@
 </div>
 <div class="row" style="margin-top: 1%">
     {% if train and train.skill == 'endurance' %}
-    <div class="col-xs-12 col-sm-12 col-md-12" align="center">
+    <div class="col-xs-12 col-sm-12 col-md-12" align="center" style="color: 959595;">
         Завершение: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}
     </div>
-    {% else %}
+    {% endif %}
     <div class="col-xs-6 col-sm-6 col-md-6" align="center">
         <div class="row">
             Стоимость:
@@ -128,13 +137,12 @@
         </div>
         <div class="row">
             {% if premium %}
-            {{ player.endurance|get_sum:1|get_mul:2400|get_hh_mm_ss }}
+            {{ player.endurance|get_sum:endurance_count|get_sum:1|get_mul:2400|get_hh_mm_ss }}
             {% else %}
-            {{ player.endurance|get_sum:1|get_mul:3600|get_hh_mm_ss }}
+            {{ player.endurance|get_sum:endurance_count|get_sum:1|get_mul:3600|get_hh_mm_ss }}
             {% endif %}
         </div>
     </div>
-    {% endif %}
 </div>
 <div class="row" style="margin-top: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12" align="center">
@@ -149,5 +157,67 @@
             Изучить
             {% endif %}
         </button>
+        {% if train and premium and has_slot %}
+        <button type="submit" onclick="up_skill('endurance')" class="save btn btn-default">
+            +
+        </button>
+        {% endif %}
     </div>
 </div>
+{% if premium %}
+<hr>
+<div class="row" style="margin-top: 1%">
+   <div class="col-xs-12 col-sm-12 col-md-12" align="center">
+        Очередь навыков
+    </div>
+</div>
+<div class="row" style="margin-top: 5%">
+    <div class="col-xs-1 col-sm-1 col-md-1"></div>
+    {% for perk in queue %}
+    <div class="col-xs-2 col-sm-2 col-md-2" align="center">
+        <button type="submit" disabled class="save btn btn-default" style="
+        {% if perk.skill == 'power' %}
+             color: FF0000!important;
+             background-color: FF0000!important;
+             border-color: FF0000!important;
+
+        {% elif perk.skill == 'knowledge' %}
+             color: 337AB7!important;
+             background-color: 337AB7!important;
+             border-color: 337AB7!important;
+
+        {% elif perk.skill == 'endurance' %}
+             color: 18D04C!important;
+             background-color: 18D04C!important;
+             border-color: 18D04C!important;
+        {% endif %}
+        ">
+            +
+        </button>
+    </div>
+    {% endfor %}
+    {% if has_slot %}
+    {% with 5|get_sub:skills_count as free_slots %}
+        {% with ''|center:free_slots as range %}
+            {% for _ in range %}
+    <div class="col-xs-2 col-sm-2 col-md-2" align="center">
+        <button type="submit" disabled class="save btn btn-default">
+            +
+        </button>
+    </div>
+            {% endfor %}
+        {% endwith %}
+    {% endwith %}
+    {% endif %}
+</div>
+{% endif %}
+{% if queue_need %}
+<!--<hr>-->
+<!--<div class="row" style="margin-top: 1%">-->
+<!--    <div class="col-xs-12 col-sm-12 col-md-12" align="center">-->
+<!--        <button type="submit" onclick="window.location.href = '{% url 'skill_queue' %}'" class="save btn btn-default" style="width: 80%;">-->
+<!--            Перейти к списку навыков-->
+<!--        </button>-->
+<!--    </div>-->
+<!--</div>-->
+{% endif %}
