--- a/player/templates/player/overview_skills.html
+++ b/player/templates/player/overview_skills.html
@@ -17,6 +17,8 @@
         Завершение: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}
     </div>
     {% endif %}
+</div>
+<div class="row" style="margin-top: 1%">
     <div class="col-xs-6 col-sm-6 col-md-6" align="center">
         <div class="row">
             Стоимость:
@@ -40,22 +42,25 @@
 </div>
 <div class="row" style="margin-top: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-        <button type="submit" {% if not train %} onclick="up_skill('power')" {% else %} disabled {% endif %} class="save btn btn-default" style="width: 50%;border-color: FF0000!important;">
+        <button type="submit" {% if not train or premium and has_slot  %} onclick="up_skill('power')" {% else %} disabled {% endif %} class="save btn btn-default" style="width: 50%;border-color: FF0000!important;">
             {% if train %}
-                {% if train.skill == 'power' %}
-                    Изучается...
+                {% if premium %}
+                    {% if has_slot %}
+                        Добавить в очередь
+                    {% else %}
+                        Недоступно
+                    {% endif %}
                 {% else %}
-                    Недоступно
+                    {% if train.skill == 'power' %}
+                        Изучается...
+                    {% else %}
+                        Недоступно
+                    {% endif %}
                 {% endif %}
             {% else %}
             Изучить
             {% endif %}
         </button>
-        {% if train and premium and has_slot %}
-        <button type="submit" onclick="up_skill('power')" class="save btn btn-default">
-            +
-        </button>
-        {% endif %}
     </div>
 </div>
 <!--знания-->
@@ -70,6 +75,8 @@
         Завершение: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}
     </div>
     {% endif %}
+</div>
+<div class="row" style="margin-top: 1%">
     <div class="col-xs-6 col-sm-6 col-md-6" align="center">
         <div class="row">
             Стоимость:
@@ -93,22 +100,25 @@
 </div>
 <div class="row" style="margin-top: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-        <button type="submit" {% if not train %} onclick="up_skill('knowledge')" {% else %} disabled {% endif %} class="save btn btn-default" style="width: 50%;border-color: 337AB7!important;">
+        <button type="submit" {% if not train or premium and has_slot  %} onclick="up_skill('knowledge')" {% else %} disabled {% endif %} class="save btn btn-default" style="width: 50%;border-color: 337AB7!important;">
             {% if train %}
-                {% if train.skill == 'knowledge' %}
-                    Изучается...
+                {% if premium %}
+                    {% if has_slot %}
+                        Добавить в очередь
+                    {% else %}
+                        Недоступно
+                    {% endif %}
                 {% else %}
-                    Недоступно
+                    {% if train.skill == 'knowledge' %}
+                        Изучается...
+                    {% else %}
+                        Недоступно
+                    {% endif %}
                 {% endif %}
             {% else %}
             Изучить
             {% endif %}
         </button>
-        {% if train and premium and has_slot %}
-        <button type="submit" onclick="up_skill('knowledge')" class="save btn btn-default">
-            +
-        </button>
-        {% endif %}
     </div>
 </div>
 <!--выносливость-->
@@ -123,6 +133,8 @@
         Завершение: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}
     </div>
     {% endif %}
+</div>
+<div class="row" style="margin-top: 1%">
     <div class="col-xs-6 col-sm-6 col-md-6" align="center">
         <div class="row">
             Стоимость:
@@ -146,22 +158,25 @@
 </div>
 <div class="row" style="margin-top: 1%">
     <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-        <button type="submit" {% if not train %} onclick="up_skill('endurance')" {% else %} disabled {% endif %} class="save btn btn-default" style="width: 50%;border-color: 18D04C!important;">
+        <button type="submit" {% if not train or premium and has_slot  %} onclick="up_skill('endurance')" {% else %} disabled {% endif %} class="save btn btn-default" style="width: 50%;border-color: 18D04C!important;">
             {% if train %}
-                {% if train.skill == 'endurance' %}
-                    Изучается...
+                {% if premium %}
+                    {% if has_slot %}
+                        Добавить в очередь
+                    {% else %}
+                        Недоступно
+                    {% endif %}
                 {% else %}
-                    Недоступно
+                    {% if train.skill == 'endurance' %}
+                        Изучается...
+                    {% else %}
+                        Недоступно
+                    {% endif %}
                 {% endif %}
             {% else %}
             Изучить
             {% endif %}
         </button>
-        {% if train and premium and has_slot %}
-        <button type="submit" onclick="up_skill('endurance')" class="save btn btn-default">
-            +
-        </button>
-        {% endif %}
     </div>
 </div>
 {% if premium %}
@@ -171,6 +186,13 @@
         Очередь навыков
     </div>
 </div>
+{% if queue %}
+<div class="row" style="margin-top: 1%">
+    <div class="col-xs-12 col-sm-12 col-md-12" align="center" style="color: 959595;">
+        Завершение: {{ last_skill.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}
+    </div>
+</div>
+{% endif %}
 <div class="row" style="margin-top: 5%">
     <div class="col-xs-1 col-sm-1 col-md-1"></div>
     {% for perk in queue %}
