--- a/state/templates/state/gov/parliament.html
+++ b/state/templates/state/gov/parliament.html
@@ -25,6 +25,31 @@
         </div>
         {% endif %}
     </div>
+    {% if pres_mandate %}
+    <div class="pres_mandate">
+        <div class="row flex">
+            <div class="col-xs-2 col-sm-2 col-md-2">
+                <a href='profile/{{ pres_mandate.player.pk }}' target="_blank">
+                    <!--если пользователь загрузил аватарку-->
+                    {% if pres_mandate.player.image %}
+                    <img src="{{ pres_mandate.player.image.url }}" width="80" height="80" align="right">
+                    {% else %}
+                    <img src="{% static 'img/nopic.png' %}" width="80" height="80"
+                         align="right">
+                    {% endif %}
+                </a>
+            </div>
+            <div class="col-xs-5 col-sm-5 col-md-5">
+                <a href='profile/{{ pres_mandate.player.pk }}' style="text-decoration: none;" target="_blank">
+                    <h3><b>{{ pres_mandate.player.nickname }}</b></h3>
+                </a>
+            </div>
+            <div class="col-xs-5 col-sm-5 col-md-5">
+                <h3><b>Президент</b></h3>
+            </div>
+        </div>
+    </div>
+    {% endif %}
     <div id="parliament_list" style=" height: 640px; overflow-y: auto; overflow-x: hidden;">
         <!--для каждой парламентской партии из списка-->
         {% for parl_party in parties %}
