--- a/state/templates/state/gov/parliament.html
+++ b/state/templates/state/gov/parliament.html
@@ -25,27 +25,60 @@
         </div>
         {% endif %}
     </div>
+    <!--правительство-->
     {% if pres_mandate %}
     <div class="pres_mandate">
-        <div class="row flex">
-            <div class="col-xs-2 col-sm-2 col-md-2">
-                <a href='profile/{{ pres_mandate.player.pk }}' target="_blank">
-                    <!--если пользователь загрузил аватарку-->
-                    {% if pres_mandate.player.image %}
-                    <img src="{{ pres_mandate.player.image.url }}" width="80" height="80" align="right">
-                    {% else %}
-                    <img src="{% static 'img/nopic.png' %}" width="80" height="80"
-                         align="right">
-                    {% endif %}
-                </a>
-            </div>
-            <div class="col-xs-5 col-sm-5 col-md-5">
-                <a href='profile/{{ pres_mandate.player.pk }}' style="text-decoration: none;" target="_blank">
-                    <h3><b>{{ pres_mandate.player.nickname }}</b></h3>
-                </a>
-            </div>
-            <div class="col-xs-5 col-sm-5 col-md-5">
-                <h3><b>Президент</b></h3>
+        <div class="row">
+            <div style="display: flex; flex-wrap: wrap; justify-content: center;">
+
+                <div style="width: 150px">
+                    <div class="row">
+                        {% if pres_mandate.player %}
+                        <a href='profile/{{ pres_mandate.player.pk }}' target="_blank">
+                            <!--если пользователь загрузил аватарку-->
+                            {% if pres_mandate.player.image %}
+                            <img src="{{ pres_mandate.player.image.url }}" width="80" height="80">
+                            {% else %}
+                            <img src="{% static 'img/nopic.png' %}" width="80" height="80">
+                            {% endif %}
+                        </a>
+                        {% else %}
+                            <img src="{% static 'cross.png' %}" width="80" height="80">
+                        {% endif %}
+                    </div>
+                    <div class="row">
+                        <h3><b>Президент</b></h3>
+                    </div>
+                </div>
+                {% for minister in ministers %}
+                <div style="width: 150px">
+                    <div class="row">
+                        <a href='profile/{{ minister.player.pk }}' target="_blank">
+                            <!--если пользователь загрузил аватарку-->
+                            {% if minister.player.image %}
+                            <img src="{{ minister.player.image.url }}" width="80" height="80">
+                            {% else %}
+                            <img src="{% static 'img/nopic.png' %}" width="80" height="80">
+                            {% endif %}
+                        </a>
+                    </div>
+                    <div class="row">
+                        <h3><b>{{ minister.post_name|truncatechars:8 }}</b></h3>
+                    </div>
+                </div>
+                {% endfor %}
+                {% if pres_mandate.player and player == pres_mandate.player %}
+                <div style="width: 150px">
+                    <div class="row">
+                        <a href='ministers_manage' target="_blank">
+                            <img src="{% static 'plus.png' %}" width="80" height="80">
+                        </a>
+                    </div>
+                    <div class="row">
+                        <h3>Добавить</h3>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
     </div>
