--- a/player/templates/player/view_profile.html
+++ b/player/templates/player/view_profile.html
@@ -118,6 +118,24 @@
                                 {% endif %}
                             </div>
                         </div>
+                        {% if minister %}
+                        <!--миинстр-->
+                        <div class="row flex" style="margin-left: 10px;">
+                            <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+                                <b><font size="5">Министр:</font></b>
+<!--                                <b><font size="5" >{% trans 'party_post' %}:</font></b>-->
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                {% if minister.state.image %}
+                                <!--Картинка партии-->
+                                <img src="{{ minister.state.image.url }}" width="30" height="30" onclick="window.location.href = '/state/{{ minister.state.pk }}/'" style="cursor: pointer">
+                                {% else %}
+                                <img src="{% static 'img/congress.svg' %}" width="30" height="30" onclick="window.location.href = '/state/{{ minister.state.pk }}/'" style="cursor: pointer">
+                                {% endif %}
+                                <b onclick="window.location.href = '/state/{{ minister.state.pk }}/'" style="cursor: pointer"><font size="4">{{ minister.state.title }}</font></b>
+                            </div>
+                        </div>
+                        {% endif %}
                         <!--биография-->
                         <div class="row flex" style="margin-left: 10px;">
                             <div class="col-xs-6 col-sm-6 col-md-6" align="left">
