--- a/bill/templates/state/gov/bills/change_coat.html
+++ b/bill/templates/state/gov/bills/change_coat.html
@@ -51,6 +51,21 @@
                 <div class="row" style="margin-top: 15px">
                     <a class="btn btn-danger" onclick="vote_bill('ChangeCoat',{% localize off %}{{ bill.pk }}{% endlocalize %},'con')">Проголосовать</a>
                 </div>
+                {% elif has_right and player in bill.votes_pro.all %}
+                {% with president=data|dict_key:'president' %}
+                <div class="row">
+                    {% if president in bill.votes_pro.all %}
+                    <a class="btn btn-success" disabled style="background-color: #FFFFFF">
+                        <font color="green">Подписано президентом</font>
+                    </a>
+                    {% endif %}
+                </div>
+                <div class="row" style="margin-top: 15px">
+                    <a class="btn btn-warning" {% if not president in bill.votes_pro.all %}disabled{% endif %}  onclick="speedup_bill('ChangeCoat',{% localize off %}{{ bill.pk }}{% endlocalize %})">
+                    <font color="black">Принять досрочно</font>
+                </a>
+                </div>
+                {% endwith %}
                 {% else %}
                 <font size="5">
                     {% if player in bill.votes_pro.all %}
