--- a/bill/templates/state/gov/bills/explore_resources.html
+++ b/bill/templates/state/gov/bills/explore_resources.html
@@ -69,6 +69,7 @@
     {% with is_deputy=data|dict_key:'is_deputy' %}
         {% if is_deputy %}
             {% with player=data|dict_key:'player' %}
+            {% with has_right=data|dict_key:'has_right' %}
                 {% if player not in bill.votes_pro.all and player not in bill.votes_con.all %}
                 <div class="row">
                     <a class="btn btn-success" onclick="vote_bill('ExploreResources',{% localize off %}{{ bill.pk }}{% endlocalize %},'pro')">Проголосовать</a>
@@ -76,6 +77,21 @@
                 <div class="row" style="margin-top: 15px">
                     <a class="btn btn-danger" onclick="vote_bill('ExploreResources',{% localize off %}{{ bill.pk }}{% endlocalize %},'con')">Проголосовать</a>
                 </div>
+                {% elif has_right and player in bill.votes_pro.all %}
+                {% with president=data|dict_key:'president' %}
+                <div class="row">
+                    {% if president in bill.votes_pro.all %}
+                    <a class="btn btn-success" disabled style="background-color: #FFFFFF">
+                        <font color="green">Подписано президентом</font>
+                    </a>
+                    {% endif %}
+                </div>
+                <div class="row" style="margin-top: 15px">
+                    <a class="btn btn-warning" {% if not president in bill.votes_pro.all %}disabled{% endif %}  onclick="speedup_bill('ExploreResources',{% localize off %}{{ bill.pk }}{% endlocalize %})">
+                    <font color="black">Принять досрочно</font>
+                </a>
+                </div>
+                {% endwith %}
                 {% else %}
                 <font size="5">
                     {% if player in bill.votes_pro.all %}
@@ -86,6 +102,7 @@
                     {% endif %}
                 </font>
                 {% endif %}
+            {% endwith %}
             {% endwith %}
         {% endif %}
     {% endwith %}
